syntax = "proto3";

option csharp_namespace = "Shared.Grpc.Models";

package car_service;

import "google/protobuf/timestamp.proto";

message UserDto {
  int32 id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
}
